[MODINVOSTO-138] - Logging improvement