@@ -25,7 +25,7 @@ public class BatchVoucherService {
 
   private static final String BATCH_VOUCHER_ID = "batchVoucherId";
   private static final String BATCH_VOUCHERS_TABLE = "batch_vouchers";
-  private static final Logger logger = LogManager.getLogger(BatchVoucherService.class);
+  private static final Logger log = LogManager.getLogger(BatchVoucherService.class);
   private final PostgresClient pgClient;
 
   public BatchVoucherService(PostgresClient pgClient) {
@@ -33,11 +33,11 @@ public class BatchVoucherService {
   }
 
   public void deleteBatchVoucherById(String id, Context vertxContext, Handler<AsyncResult<Response>> asyncResultHandler) {
-
+    log.debug("deleteBatchVoucherById:: Trying to delete batch voucher with id: {}", id);
     BatchVoucherExportsService batchVoucherExportsService = new BatchVoucherExportsService(pgClient);
 
     vertxContext.runOnContext(v -> {
-      Tx<Map<String, String>> tx = new Tx<>(ImmutableMap.of(BATCH_VOUCHER_ID, id), pgClient);
+      Tx<Map<String, String>> tx = new Tx<>(Map.of(BATCH_VOUCHER_ID, id), pgClient);
 
       tx.startTx()
         .compose(batchVoucherExportsService::deleteBatchVoucherExportsByBatchVoucherId)
@@ -50,14 +50,14 @@ public class BatchVoucherService {
   public Future<Tx<Map<String, String>>> deleteBatchVoucherById(Tx<Map<String, String>> tx) {
     Promise<Tx<Map<String, String>>> promise = Promise.promise();
     String batchVoucherId = tx.getEntity().get(BATCH_VOUCHER_ID);
-    logger.debug("deleteBatchVoucherById:: Trying to delete batch voucher with id: {}", batchVoucherId);
+    log.debug("deleteBatchVoucherById:: Trying to delete batch voucher with id: {}", batchVoucherId);
     pgClient.delete(tx.getConnection(), BATCH_VOUCHERS_TABLE, batchVoucherId, rs -> {
-      logger.info("deleteBatchVoucherById:: deletion of batch voucher completed");
+      log.info("deleteBatchVoucherById:: deletion of batch voucher completed");
       if (rs.result().rowCount() == 0) {
-        logger.warn("deleteBatchVoucherById:: Batch voucher with id '{}' not found", batchVoucherId);
+        log.warn("deleteBatchVoucherById:: Batch voucher with id '{}' not found", batchVoucherId);
         promise.fail(new HttpException(NOT_FOUND.getStatusCode(), NOT_FOUND.getReasonPhrase()));
       } else {
-        logger.info("deleteBatchVoucherById:: Batch voucher with id '{}' deleted", tx.getEntity().get(BATCH_VOUCHER_ID));
+        log.info("deleteBatchVoucherById:: Batch voucher with id '{}' deleted", tx.getEntity().get(BATCH_VOUCHER_ID));
         promise.complete(tx);
       }
     });
